@@ -1,3 +1,8 @@
+30 May 2007: Wouter
+	- removed FLAG_CD from message and rrset caches. This was useful for
+	  an agnostic forwarder, but not for a sophisticated (trust value per
+	  rrset enabled) cache.
+
 29 May 2007: Wouter
 	- routines to lock and unlock array of rrsets moved to cache/rrset.
 	- lookup message from msg cache (and copy to region).
